# lshape-ws

./: .gitignore  README.md
config/: lshape_detect.yaml
etc/hd_map_parser/: bono_frenet_parser.py  bono_map_check.py  bono_map_modify.py  hd_map_parser.py  new_hd_map_parser.py  point_arranger.py
etc/hd_map_parser/input_file/: DH_test3.csv  KCITY_TEST.csv  KIAPI_Racing_center_240703.csv  kiapi_racing_map_20240703_2.csv  kiapi_racing_map_20240703_4.csv  kiapi_racing_map_20240703_5.csv  kiapi_racing_map_20240703_6.csv  kiapi_racing_map_20240703_7.csv  kiapi_racing_map_20240703_8.csv  kiapi_taxi_map.csv  map_data_detail.json
etc/hd_map_parser/output_file/: DH_test2map_data_detail.json  DH_test2road_relation.json  DH_test3map_data_detail.json  DH_test3road_relation.json  KCITY_TESTmap_data_detail.json  KCITY_TESTroad_relation.json  KIAPI_Racing_center_240703map_data_detail.json  KIAPI_Racing_center_240703road_relation.json  KIAPI_racing_map_20240703map_data_detail.json  KIAPI_racing_map_20240703road_relation.json  kiapi_racing_map_20240703_2map_data_detail.json  kiapi_racing_map_20240703_2road_relation.json  kiapi_racing_map_20240703_3map_data_detail.json  kiapi_racing_map_20240703_3road_relation.json  kiapi_racing_map_20240703_4map_data_detail.json  kiapi_racing_map_20240703_4road_relation.json  kiapi_racing_map_20240703_5map_data_detail.json  kiapi_racing_map_20240703_5road_relation.json  kiapi_racing_map_20240703_6map_data_detail.json  kiapi_racing_map_20240703_6road_relation.json  kiapi_racing_map_20240703_7map_data_detail.json  kiapi_racing_map_20240703_7road_relation.json  kiapi_racing_map_20240703_8map_data_detail.json  kiapi_racing_map_20240703_8road_relation.json  kiapi_racing_map_20240704_1road_relation.json  kiapi_racing_map_20240705_1road_relation.json  kiapi_racing_map_20240708map_data_detail.json  kiapi_racing_map_20240708road_relation.json  kiapi_racing_map_20240712_1map_data_detail.json  kiapi_racing_map_20240712_1road_relation.json  kiapi_racing_map_20240712_2map_data_detail.json  kiapi_racing_map_20240712_2road_relation.json  kiapi_racing_map_20240712_3map_data_detail.json  kiapi_racing_map_20240712_3road_relation.json  kiapi_racing_map_20240821_2road_relation.json  kiapi_racing_map_20240827_2road_relation.json  kiapi_racing_map_20240828_1road_relation.json  kiapi_racing_maproad_relation.json  kiapi_taxi_mapmap_data_detail.json  kiapi_taxi_maproad_relation.json  (+3 more)
etc/map_point_parser/: map_data_detail.json  map_point_parser.py
rviz/: dh_rviz.rviz  dh_rviz2.rviz  dh_rviz3.rviz  jw_perc.rviz  localization.rviz  lpp_test.rviz  lpp_test_0905.rviz  rule_base.rviz
src/avante_msg/: CMakeLists.txt  package.xml
src/avante_msg/msg/: AvanteCAN1808.msg  AvanteCAN1809.msg  AvanteCAN1811.msg  AvanteCAN1812.msg  AvanteCAN342.msg
src/avante_msg2/: CMakeLists.txt  package.xml
src/avante_msg2/msg/: Avante2CAN1808.msg  Avante2CAN1809.msg  Avante2CAN1810.msg  Avante2CAN1811.msg  Avante2CAN292.msg  Avante2CAN293.msg  Avante2CAN294.msg  Avante2CAN342.msg  Avante2CAN343.msg
src/custom_msgs/: CMakeLists.txt
src/custom_msgs/msg/: BoundingBox.msg  BoundingBoxArray.msg  ContourSegments.msg  Contours.msg  Episodeflag.msg  Object.msg  ObjectInfos.msg  Paths.msg  Rlstate.msg
src/custom_msgs/srv/: LaneChange.srv
src/occupancy_gridmap_generator/: CMakeLists.txt  package.xml
src/occupancy_gridmap_generator/src/: ogmap_generator.cpp
src/pillar_detect/: package.xml  setup.cfg  setup.py
src/pillar_detect/configs/: __init__.py
src/pillar_detect/configs/dataset_configs/: kitti_dataset.yaml  waymo_dataset.yaml
src/pillar_detect/configs/kitti_models/: pointpillar.yaml
src/pillar_detect/configs/waymo_models/: ksj_pointpillar_waymo.yaml  pointpillar_waymo.yaml
src/pillar_detect/datasets/: dataset.py
src/pillar_detect/datasets/augmentor/: data_augmentor.py  database_sampler.py
src/pillar_detect/datasets/processor/: data_processor.py
src/pillar_detect/models/: __init__.py
src/pillar_detect/models/backbones_2d/: base_bev_backbone.py
src/pillar_detect/models/dense_heads/: anchor_head_single.py  (+1 more)
src/pillar_detect/pillar_detect/: custom_utils.py  export.py  infer_pillar.py  modify_onnx.py
src/pillar_detect/utils/: box_coder_utils.py  loss_utils.py
src/rule_based_detect/: CMakeLists.txt  package.xml
src/rule_based_detect/config/: lshape_detect.yaml
src/rule_based_detect/ext_lib/SimpleDBSCAN/: CMakeLists.txt
src/rule_based_detect/ext_lib/SimpleDBSCAN/include/SimpleDBSCAN/: dbscan.h
src/rule_based_detect/ext_lib/SimpleDBSCAN/src/: kdtree.cpp
src/rule_based_detect/ext_lib/ouster_example/: CMakeLists.txt
src/rule_based_detect/include/rule_based_detect/: lshape_detect.hpp  patchworkpp.h  readcsv_utils.hpp  timer_utils.hpp
src/rule_based_detect/launch/: perception.launch.py
src/rule_based_detect/mapdata/: kcity_l.csv  kcity_r.csv  lane_1.csv  lane_2.csv  lane_3.csv  log.csv  map_v2_al_1m.csv  map_v2_al_5m.csv  map_v2_ar_1m.csv  map_v2_ar_5m.csv  map_v2_l_1m (copy).csv  map_v2_l_1m.csv  map_v2_l_5m.csv  map_v2_r_1m (copy).csv  map_v2_r_1m.csv  map_v2_r_5m.csv  zokermap_l_1m.csv  zokermap_l_5m.csv  zokermap_r_1m.csv  zokermap_r_5m.csv
src/rule_based_detect/src/: lshape_detect.cpp  rule_based_detection.cpp
src/save_can_interface/: README.md  can_lib_install_guide.txt  package.xml  setup.cfg  setup.py
src/save_can_interface/launch/: save_CAN.launch
src/save_can_interface/save_can_interface/: EAIT_CAN(AVANTE_CN7).dbc  EAIT_Controller.dbc  avante2_interface.py  avante_interface.py  v2x_interface.py
src/sbg_can_interface/: package.xml  setup.cfg  setup.py
src/sbg_can_interface/sbg_can_interface/: ikver.dbc  sbg_can_interface.py  sbg_ellipse_d.dbc  sbgver.dbc
src/sbg_msgs/: CMakeLists.txt  package.xml
src/tracker/: package.xml  setup.py
src/tracker/csv/: 20240816_155039_global.csv  20240816_155131_global.csv  20241002_173155_global.csv  ttc_visualize_data.py  validate_csv.ipynb  validate_csv_with_id.ipynb
src/tracker/tracker/: bbox_tracker_node.py  fake_object_publisher.py  multi_tracker_node.py  static_tracker_node.py  tracker_node.py
(+17 files in other folders)
